--- a/myprofile.html
+++ b/myprofile.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My profile</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>My profile</h1>
-    <h2>Phutawan Krasaewut</h2>
-    <h3>INET04</h3>
-    <h3>SEC-B</h3>
-    <a href="http://127.0.0.1:5500/mycontact.html"target="blank">My contact</a><br>
-    <a href="http://127.0.0.1:5500/myitem.html"target="blank">My item</a><br>
-    <h3><a href="https://kmutnb.ac.th/"target="blank">Web KMUTNB</a></h3>
+    <h3>นายภูตะวัน กระแสวุฒิ</h3>
+    <h3>รหัสนักศึกษา: 6806022510564</h3>
+    <h3>สาขาวิชา: วิศวกรรมสารสนเทศและเครือข่าย (ชั้นปีที่1)</h3>
+    <h3>ช่องทางติดต่อ: s6806022510564@email.kmutnb.ac.th</h3>
+<div class="gallery">
+    <img src="images/image1.jpg" alt="รูปภาพที่ 1">
+    <img src="images/image2.jpg" alt="รูปภาพที่ 2">
+    <img src="images/image3.jpg" alt="รูปภาพที่ 3">
+</div>
 </body>
 </html>
